--- a/fundamentos/secao-2-introducao-html-e-css/dia-3-html-e-css/style4.css
+++ b/fundamentos/secao-2-introducao-html-e-css/dia-3-html-e-css/style4.css
@@ -3,22 +3,36 @@ div:hover {
 }
 div:nth-of-type(1) {
     background-color: green;
-    font-family: fantasy;
 }   
 div:nth-of-type(2) {
     background-color: magenta;
-    height: 50px;
 }   
 div:nth-of-type(3) {
     background-color: pink;
     height: 100px;
-    font-style: italic;
 }   
 div:nth-of-type(4) {
     background-color: brown;
-    border-style: dashed;
 }   
 div:nth-of-type(5) {
     background-color: yellow;
+}   
+
+div:nth-of-type(1) > h3 {
+    font-family: fantasy;
+}   
+div:nth-of-type(2) > h3 {
+    height: 50px;
+}   
+div:nth-of-type(3) > h3 {
+    color: red;
+}   
+div:nth-of-type(4) > h3 {
+    border-style: dashed;
+}   
+div:nth-of-type(5) > h3 {
     color: blue;
 }   
+div:nth-child(odd) h3 {
+    font-style: italic;
+}
